# OctoBot

./: full_requirements.txt  pyproject.toml  requirements.txt
octobot/: constants.py  enums.py
octobot/community/history_backend/: clickhouse_historical_backend_client.py  historical_backend_client.py  iceberg_historical_backend_client.py  util.py
octobot/community/models/: __init__.py  formatters.py
octobot/community/supabase_backend/: community_supabase_client.py
