[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "octobot"
version = "2.0.14"
description = "Cryptocurrencies alert / trading bot"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = {text = "GPL-3.0"}
authors = [
    {name = "Drakkar-Software", email = "contact@drakkar.software"},
]
keywords = ["cryptocurrency", "trading", "bot", "bitcoin", "ethereum", "alert"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    # Drakkar-Software requirements
    "OctoBot-Commons==1.9.86",
    "OctoBot-Trading==2.4.231",
    "OctoBot-Evaluators==1.9.7",
    "OctoBot-Tentacles-Manager==2.9.18",
    "OctoBot-Services==1.6.26",
    "OctoBot-Backtesting==1.9.7",
    "Async-Channel==2.2.1",
    "trading-backend==1.2.42",

    # Core dependencies
    "colorlog==6.8.0",
    "requests==2.32.5",
    "urllib3",  # required by requests, used in imports: make sure it's always available
    "packaging==25.0",
    "python-dotenv==1.1.1",
    "setuptools==79.0.1",  # warning: setuptools>=80 breaks easy_install, need to find an alternative not to break installs

    # Community
    "websockets==15.0.1",  # used by supabase, a recent version is required
    "gmqtt==0.7.0",
    "pgpy==0.6.0",
    "clickhouse-connect==0.8.18",
    "pyiceberg==0.10.0",
    "pydantic<2.12",  # required for pyiceberg 0.10.0
    "pyarrow==21.0.0",

    # Error tracking
    "sentry-sdk==2.35.0",  # always make sure sentry_aiohttp_transport.py keep working

    # Supabase - ensure supabase_backend_tests keep passing when updating any of those
    "supabase==2.18.1",  # Supabase client
    "supabase-auth",  # Supabase authenticated API (required by supabase and enforced to allow direct import)
    "postgrest",  # Supabase posgres calls (required by supabase and enforced to allow direct import)

    # Async HTTP requests
    "aiohttp==3.12.15",
    "aiodns==3.1.1",  # used by aiohttp

    # used by ccxt for protobuf "websockets" such as mexc
    # lock protobuf to avoid using .rc versions
    "protobuf==5.29.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
]

[project.urls]
Homepage = "https://github.com/Drakkar-Software/OctoBot"
Documentation = "https://www.octobot.cloud/en/guides"
Repository = "https://github.com/Drakkar-Software/OctoBot"
"Bug Tracker" = "https://github.com/Drakkar-Software/OctoBot/issues"

[project.scripts]
octobot = "start:main"

[tool.hatch.build.targets.wheel]
packages = ["octobot"]
include = ["start.py"]

[tool.hatch.build.targets.sdist]
include = [
    "octobot/**",
    "start.py",
    "README.md",
    "LICENSE",
    "requirements.txt",
]
exclude = [
    "tests/**",
    "additional_tests/**",
    "docker/**",
]

[tool.hatch.build]
include = [
    "octobot/config/*",
    "octobot/strategy_optimizer/optimizer_data_files/*",
]

